--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.12",
+    "autoprefixer": "^10.4.20",
     "express": "^4.18.2",
+    "ngx-cookie-service": "^18.0.0",
+    "postcss": "^8.4.49",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.13",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.16",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
